--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
   <meta name="apple-mobile-web-app-title" content="Fishing Log" />
   <title>Barrie Ontario Fishing Logbook</title>
   <link rel="stylesheet" href="style.css" />
+  <link rel="manifest" href="manifest.json" />
+<link rel="apple-touch-icon" href="icons/icon-192.png" />
+<meta name="apple-mobile-web-app-capable" content="yes" />
+<meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
+<meta name="theme-color" content="#3e8e41" />
 </head>
 <body>
   <div class="container">
@@ -65,5 +70,12 @@
   </div>
 
   <script src="script.js"></script>
+  <script>
+  if ("serviceWorker" in navigator) {
+    navigator.serviceWorker.register("sw.js").then(() =>
+      console.log("Service Worker Registered")
+    );
+  }
+</script>
 </body>
 </html>
