--- a/index.html
+++ b/index.html
@@ -61,6 +61,11 @@
               <label class="input-label">Notes</label>
               <textarea class="input-field" id="notes1" placeholder="Describe the catch, conditions, techniques used, weather, time of day, bait..."></textarea>
             </div>
+            <section id="memories">
+  <h2>Memories & Moments</h2>
+  <input type="file" accept="image/*" multiple onchange="handlePhotoUpload(event)">
+  <div id="photo-album"></div>
+</section>
           </div>
         </div>
       </div>
