--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
   <meta name="mobile-web-app-capable" content="yes">
   <link rel="manifest" href="manifest.json" />
   <link rel="stylesheet" href="style.css" />
-  <title>Braidan’s Fishing Tally</title>
+  <title>Fishing Tally</title>
 </head>
 <body>
   <header>
-    <h1>🎣 Braidan’s Fishing Journal</h1>
+    <h1>🎣 Fishing Journal</h1>
     <nav>
       <button class="tab-btn" onclick="showTab('tallyTab')">Tally</button>
       <button class="tab-btn" onclick="showTab('memoriesTab')">Memories</button>
