--- a/index.html
+++ b/index.html
@@ -20,7 +20,9 @@
   <main>
     <!-- Tally Section -->
     <section id="species-tab" class="tab active">
-      <div class="species-list" id="species-list"></div>
+      <div class="species-list" id="species-list">
+        <div class="tally-container" id="tally-container"></div>
+      </div>
       <button class="reset-btn" onclick="resetSeason()">🔁 Reset Season</button>
     </section>
 
@@ -31,7 +33,7 @@
         <label for="photo-input">📸 Add photo to album:</label>
         <input type="file" id="photo-input" accept="image/*" />
       </div>
-      <div id="photo-album"></div>
+      <div id="photo-gallery"></div>
     </section>
   </main>
 
