--- a/index.html
+++ b/index.html
@@ -31,6 +31,9 @@
         </div>
         <div class="gallery" id="photoGallery"></div>
     </div>
+    <div id="photoModal" class="modal" onclick="closeModal()">
+    <img id="modalImg" class="modal-img">
+</div>
 
     <script src="script.js"></script>
 </body>
