--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <title>Fish Tally</title>
     <link rel="manifest" href="manifest.json" />
     <link rel="stylesheet" href="styles.css" />
+    <link rel="icon" type="image/png" href="1E44A4B3-867E-4276-AAB4-502B760C8F57.png">
 </head>
 <body>
     <div class="tabs">
