--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
     <title>Fish Tally</title>
     <link rel="manifest" href="manifest.json" />
     <link rel="stylesheet" href="styles.css" />
+    <!-- Favicon for browser tab -->
+<link rel="icon" type="image/png" href="icons/icon_192x192.png">
+
+<!-- iOS/Android homescreen shortcut -->
+<link rel="apple-touch-icon" href="icons/icon_192x192.png">
    
 </head>
 <body>
