--- a/index.html
+++ b/index.html
@@ -5,15 +5,12 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <title>Fish Tally</title>
-    <link rel="manifest" href="manifest.json" />
+    <title>Fishin Buddy</title>
     <link rel="stylesheet" href="styles.css" />
-    <!-- Favicon for browser tab -->
-<link rel="icon" type="image/png" href="icons/icon_192x192.png">
-
-<!-- iOS/Android homescreen shortcut -->
-<link rel="apple-touch-icon" href="icons/icon_192x192.png">
-   
+    <link rel="manifest" href="manifest.json">
+<link rel="icon" href="icon_192x192.png">
+<link rel="apple-touch-icon" href="icon_192x192.png">
+     
 </head>
 <body>
     <div class="tabs">
