--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <title>Fishin Buddy</title>
     <link rel="stylesheet" href="styles.css" />
     <link rel="manifest" href="manifest.json">
-<link rel="icon" href="icon_192x192.png">
-<link rel="apple-touch-icon" href="icon_192x192.png">
+<link rel="icon" type="image/webp" href="icon_192x192.webp">
+<link rel="apple-touch-icon" href="icon_192x192.webp">
      
 </head>
 <body>
