--- a/index.html
+++ b/index.html
@@ -1,49 +1,191 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
-    <title>Fishin Buddy</title>
-    <link rel="stylesheet" href="styles.css" />
-    <link rel="manifest" href="manifest.json">
-    <link rel="icon" type="image/webp" href="icon_192x192.webp">
-    <link rel="apple-touch-icon" href="icon_192x192.webp">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta name="theme-color" content="#000000" />
+  <title>Fishin Buddy</title>
+  <link rel="stylesheet" href="styles.css" />
+  <link rel="manifest" href="manifest.json" />
+  <link rel="icon" type="image/webp" href="icon_192x192.webp" />
+  <link rel="apple-touch-icon" href="icon_192x192.webp" />
+  <style>
+    /* Minimal inline styles to keep basic layout intact */
+    body {
+      font-family: Arial, sans-serif;
+      margin: 0 1rem;
+      background: #f9f9f9;
+    }
+    .tabs {
+      display: flex;
+      margin-top: 1rem;
+      border-bottom: 2px solid #ccc;
+    }
+    .tab-button {
+      flex: 1;
+      padding: 0.75rem;
+      background: #eee;
+      border: none;
+      cursor: pointer;
+      font-weight: bold;
+      transition: background 0.3s;
+    }
+    .tab-button.active {
+      background: #0077cc;
+      color: white;
+      border-bottom: 3px solid #004a8c;
+    }
+    .tab-content {
+      display: none;
+      padding: 1rem 0 2rem 0;
+    }
+    .tab-content.active {
+      display: block;
+    }
+    .season-total {
+      font-weight: bold;
+      color: #0077cc;
+      margin-bottom: 1rem;
+      font-size: 1.2rem;
+    }
+    .reset-btn {
+      margin-top: 1rem;
+      background: #cc3300;
+      color: white;
+      border: none;
+      padding: 0.5rem 1rem;
+      border-radius: 6px;
+      cursor: pointer;
+      font-weight: bold;
+    }
+
+    /* Memories photo upload */
+    #photoUploader {
+      background: white;
+      padding: 1rem;
+      border-radius: 6px;
+      box-shadow: 0 0 5px #ccc;
+      margin-bottom: 1rem;
+    }
+    #photoUploader textarea,
+    #photoUploader input[type="text"] {
+      width: 100%;
+      box-sizing: border-box;
+      padding: 0.5rem;
+      margin: 0.3rem 0 1rem 0;
+      font-size: 1rem;
+      border-radius: 4px;
+      border: 1px solid #ccc;
+      resize: vertical;
+    }
+    #photoUploader button {
+      background: #0077cc;
+      color: white;
+      border: none;
+      padding: 0.6rem 1.2rem;
+      border-radius: 6px;
+      cursor: pointer;
+      font-weight: bold;
+      font-size: 1rem;
+    }
+
+    /* Gallery */
+    #photoGallery {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(140px, 1fr));
+      gap: 1rem;
+    }
+    .photo-container {
+      background: white;
+      border-radius: 6px;
+      box-shadow: 0 0 6px #ccc;
+      padding: 0.5rem;
+      text-align: center;
+      font-size: 0.85rem;
+      color: #333;
+      cursor: pointer;
+    }
+    .photo-container img {
+      width: 100%;
+      height: 120px;
+      object-fit: cover;
+      border-radius: 6px;
+      margin-bottom: 0.4rem;
+    }
+
+    /* Modal */
+    #photoModal {
+      display: none;
+      position: fixed;
+      z-index: 1000;
+      padding-top: 60px;
+      left: 0; top: 0;
+      width: 100%;
+      height: 100%;
+      overflow: auto;
+      background-color: rgba(0,0,0,0.8);
+    }
+    #photoModal img {
+      margin: auto;
+      display: block;
+      max-width: 90%;
+      max-height: 80vh;
+      border-radius: 8px;
+    }
+    #modalCaption, #modalDate, #modalLocation {
+      color: white;
+      text-align: center;
+      margin: 0.5rem 0;
+      font-size: 1rem;
+    }
+    #modalClose {
+      position: absolute;
+      top: 20px;
+      right: 35px;
+      color: white;
+      font-size: 40px;
+      font-weight: bold;
+      cursor: pointer;
+      user-select: none;
+    }
+  </style>
 </head>
 <body>
-    <div class="tabs">
-        <button class="tab-button active" onclick="showTab('tally')">Tally</button>
-        <button class="tab-button" onclick="showTab('memories')">Memories</button>
+  <div class="tabs" role="tablist" aria-label="Main Tabs">
+    <button class="tab-button active" onclick="showTab('tallyTab')" role="tab" aria-selected="true" aria-controls="tallyTab" id="tabTally">Tally</button>
+    <button class="tab-button" onclick="showTab('memoriesTab')" role="tab" aria-selected="false" aria-controls="memoriesTab" id="tabMemories">Memories</button>
+  </div>
+
+  <section id="tallyTab" class="tab-content active" role="tabpanel" aria-labelledby="tabTally">
+    <div class="season-total">Season Total: <span id="grandTotal">0</span> Fish</div>
+    <div id="fishList" aria-live="polite"></div>
+    <button class="reset-btn" onclick="resetSeason()">Reset Season</button>
+  </section>
+
+  <section id="memoriesTab" class="tab-content" role="tabpanel" aria-labelledby="tabMemories" tabindex="0">
+    <div id="photoUploader" class="photo-upload" aria-label="Upload photo with caption and location">
+      <label for="photoCaption">Caption:</label>
+      <textarea id="photoCaption" placeholder="Write a caption..."></textarea>
+
+      <label for="photoLocation">Location (enter manually):</label>
+      <input type="text" id="photoLocation" placeholder="Enter location" />
+
+      <input type="file" id="photoInput" accept="image/*" capture="environment" style="display:none" />
+      <button type="button" onclick="document.getElementById('photoInput').click()">Upload Photo</button>
     </div>
 
-    <div id="tallyTab" class="tab-content">
-        <div class="season-total">Season Total: <span id="grandTotal">0</span> Fish</div>
-        <div id="fishList"></div>
-        <button class="reset-btn" onclick="resetSeason()">Reset Season</button>
-    </div>
+    <div id="photoGallery" aria-live="polite" aria-label="Photo gallery"></div>
+  </section>
 
-    <div id="memoriesTab" class="tab-content" style="display:none;">
-        
-        <!-- 👇 NEW Photo Upload Section -->
-        <div id="photoUploader" class="photo-upload">
-            <textarea id="photoCaption" placeholder="Write a caption..."></textarea>
-            <input type="file" id="photoInput" accept="image/*" capture="environment" style="display:none">
-            <button onclick="document.getElementById('photoInput').click()">Upload Photo</button>
-        </div>
+  <!-- Photo Modal -->
+  <div id="photoModal" class="modal" role="dialog" aria-modal="true" aria-labelledby="modalCaption" aria-describedby="modalDate modalLocation">
+    <span class="close" id="modalClose" role="button" aria-label="Close modal">&times;</span>
+    <img class="modal-content" id="modalImg" alt="Full Size Photo" />
+    <div id="modalCaption"></div>
+    <div id="modalDate"></div>
+    <div id="modalLocation"></div>
+  </div>
 
-        <div class="gallery" id="photoGallery"></div>
-    </div>
-
-    <!-- Photo Modal -->
-    <!-- Photo Modal -->
-<div id="photoModal" class="modal" style="display:none;">
-  <span class="close" id="modalClose">&times;</span>
-  <img class="modal-content" id="modalImg" alt="Full Size Photo">
-  <div id="modalCaption"></div>
-  <div id="modalDate"></div>
-  <div id="modalLocation"></div>
-</div>
-
-    <script src="script.js"></script>
+  <script src="script.js"></script>
 </body>
 </html>
