--- a/index.html
+++ b/index.html
@@ -14,30 +14,30 @@
     font-family: Arial, sans-serif;
     margin: 0 1rem;
     background: #000;
-    color: #f5f5dc; /* Beige text */
+    color: #f5f5dc;
   }
 
   .tabs {
     display: flex;
     margin-top: 1rem;
-    border-bottom: 2px solid #8b0000; /* Dark red border */
+    border-bottom: 2px solid #444;
   }
 
   .tab-button {
     flex: 1;
     padding: 0.75rem;
     background: #111;
-    border: none;
     color: #f5f5dc;
+    border: none;
     cursor: pointer;
     font-weight: bold;
     transition: background 0.3s;
   }
 
   .tab-button.active {
-    background: #8b0000;
-    color: #f5f5dc;
-    border-bottom: 3px solid #ff0000;
+    background: #cc3300;
+    color: black;
+    border-bottom: 3px solid #aa2200;
   }
 
   .tab-content {
@@ -51,15 +51,15 @@
 
   .season-total {
     font-weight: bold;
-    color: #ff6347; /* Tomato red */
+    color: #cc3300;
     margin-bottom: 1rem;
     font-size: 1.2rem;
   }
 
   .reset-btn {
     margin-top: 1rem;
-    background: #8b0000;
-    color: #f5f5dc;
+    background: #cc3300;
+    color: #000;
     border: none;
     padding: 0.5rem 1rem;
     border-radius: 6px;
@@ -83,15 +83,14 @@
     margin: 0.3rem 0 1rem 0;
     font-size: 1rem;
     border-radius: 4px;
-    border: 1px solid #8b0000;
-    background: #222;
+    border: 1px solid #444;
+    background: #000;
     color: #f5f5dc;
-    resize: vertical;
   }
 
   #photoUploader button {
-    background: #8b0000;
-    color: #f5f5dc;
+    background: #cc3300;
+    color: #000;
     border: none;
     padding: 0.6rem 1.2rem;
     border-radius: 6px;
@@ -130,12 +129,11 @@
     position: fixed;
     z-index: 1000;
     padding-top: 60px;
-    left: 0;
-    top: 0;
+    left: 0; top: 0;
     width: 100%;
     height: 100%;
     overflow: auto;
-    background-color: rgba(0, 0, 0, 0.9);
+    background-color: rgba(0,0,0,0.9);
   }
 
   #photoModal img {
@@ -146,9 +144,7 @@
     border-radius: 8px;
   }
 
-  #modalCaption,
-  #modalDate,
-  #modalLocation {
+  #modalCaption, #modalDate, #modalLocation {
     color: #f5f5dc;
     text-align: center;
     margin: 0.5rem 0;
