--- a/index.html
+++ b/index.html
@@ -67,37 +67,34 @@
     font-weight: bold;
   }
 
-  #photoUploader {
-    background: #111;
-    padding: 1rem;
-    border-radius: 6px;
-    box-shadow: 0 0 5px #222;
-    margin-bottom: 1rem;
-  }
-
-  #photoUploader textarea,
-  #photoUploader input[type="text"] {
-    width: 100%;
-    box-sizing: border-box;
-    padding: 0.5rem;
-    margin: 0.3rem 0 1rem 0;
-    font-size: 1rem;
-    border-radius: 4px;
-    border: 1px solid #444;
-    background: #000;
-    color: #f5f5dc;
-  }
-
   #photoUploader button {
-    background: #cc3300;
-    color: #000;
-    border: none;
-    padding: 0.6rem 1.2rem;
-    border-radius: 6px;
-    cursor: pointer;
-    font-weight: bold;
-    font-size: 1rem;
-  }
+  background-color: #cc3300;  /* Strong red, your red */
+  color: #f5f0e6;             /* Beige-ish text */
+  border: none;
+  padding: 0.6rem 1.2rem;
+  border-radius: 6px;
+  cursor: pointer;
+  font-weight: bold;
+  font-size: 1rem;
+  display: inline-block;
+  box-shadow: 0 0 8px #cc3300aa;
+  transition: background-color 0.3s ease;
+}
+
+#photoUploader button:hover,
+#photoUploader button:focus {
+  background-color: #a12a00;  /* Darker red on hover */
+  outline: none;
+}
+
+    #photoUploader {
+  background-color: #121212; /* Very dark grey/black */
+  padding: 1rem;
+  border-radius: 6px;
+  box-shadow: 0 0 10px #330000cc;
+  margin-bottom: 1rem;
+  color: #f5f0e6; /* Beige text inside */
+}
 
   #photoGallery {
     display: grid;
