--- a/index.html
+++ b/index.html
@@ -162,8 +162,8 @@
 </head>
 <body>
   <div class="tabs" role="tablist" aria-label="Main Tabs">
-    <button class="tab-button active" onclick="showTab('tallyTab')" role="tab" aria-selected="true" aria-controls="tallyTab" id="tabTally">Tally</button>
-    <button class="tab-button" onclick="showTab('memoriesTab')" role="tab" aria-selected="false" aria-controls="memoriesTab" id="tabMemories">Memories</button>
+    <button class="tab-button" data-tab="tally">Tally</button>
+<button class="tab-button" data-tab="memories">Memories</button>
   </div>
 
   <section id="tallyTab" class="tab-content active" role="tabpanel" aria-labelledby="tabTally">
