--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
     margin: 0 1rem;
     background: #000;
     color: #f5f5dc;
+    font-size:1.05rem;
+    line-height: 1.6;
   }
 
   .tabs {
@@ -106,7 +108,8 @@
     background: #111;
     border-radius: 6px;
     box-shadow: 0 0 6px #222;
-    padding: 0.5rem;
+    padding: 0.75rem;
+    margin-bottom: 1rem;
     text-align: center;
     font-size: 0.85rem;
     color: #f5f5dc;
