--- a/index.html
+++ b/index.html
@@ -19,6 +19,26 @@
     line-height: 1.6;
   }
 
+    button {
+  background-color: #f5f5dc; /* Beige */
+  color: #000000;            /* Black text */
+  border: none;
+  padding: 0.6rem 1.2rem;
+  border-radius: 6px;
+  cursor: pointer;
+  font-weight: bold;
+  font-size: 1rem;
+  box-shadow: 0 0 6px #33333333;
+  transition: background-color 0.2s ease, transform 0.1s ease;
+}
+
+button:hover,
+button:focus {
+  background-color: #e5e5c4; /* Slightly darker beige */
+  outline: none;
+  transform: scale(1.02);
+}
+
   .tabs {
     display: flex;
     margin-top: 1rem;
