--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@ button:focus {
       <label for="photoLocation">Enter Location:</label>
       <input type="text" id="photoLocation" placeholder="Enter location" />
       <br>
-      <input type="file" id="photoInput" accept="image/*" capture="environment" style="display:none" />
+      <input type="file" id="photoInput" accept="image/*" style="display:none" />
       <button type="button" onclick="document.getElementById('photoInput').click()">Upload Photo</button>
     </div>
 
