--- a/index.html
+++ b/index.html
@@ -207,6 +207,7 @@ button:focus {
       <br>
       <input type="file" id="photoInput" accept="image/*" style="display:none" />
       <button type="button" onclick="document.getElementById('photoInput').click()">Upload Photo</button>
+      <button type="button" onclick="savePhotoPost()">Save Post</button>
     </div>
 
     <div id="photoGallery" aria-live="polite" aria-label="Photo gallery"></div>
