--- a/index.html
+++ b/index.html
@@ -186,8 +186,8 @@ button:focus {
 <body>
   <div class="tabs" role="tablist" aria-label="Main Tabs">
     <div class="tab-buttons">
-  <button class="tab-button active" data-tab="tally" onclick="showTab('tally')">Tally</button>
-  <button class="tab-button" data-tab="memories" onclick="showTab('memories')">Memories</button>
+  <button type="button" onclick="document.getElementById('photoInput').click()">Upload Photo</button>
+<button type="button" onclick="savePhotoPost()">Save Post</button>
 </div>
   </div>
 
