--- a/index.html
+++ b/index.html
@@ -186,8 +186,8 @@ button:focus {
 <body>
   <!-- Tabs buttons container -->
   <div class="tabs" role="tablist" aria-label="Main Tabs">
-    <button class="tab-button active" id="tabTally" role="tab" aria-selected="true" aria-controls="tallyTab" onclick="openTab('tallyTab', this)">Tally</button>
-    <button class="tab-button" id="tabMemories" role="tab" aria-selected="false" aria-controls="memoriesTab" onclick="openTab('memoriesTab', this)">Memories</button>
+    <button class="tab-button active" id="tallyTab" role="tab" aria-selected="true" aria-controls="tallyTab" onclick="openTab('tallyTab', this)">Tally</button>
+    <button class="tab-button" id="memoriesTab" role="tab" aria-selected="false" aria-controls="memoriesTab" onclick="openTab('memoriesTab', this)">Memories</button>
   </div>
 
   <!-- Tabs content containers -->
