--- a/index.html
+++ b/index.html
@@ -186,8 +186,8 @@ button:focus {
 <body>
   <!-- Tabs buttons container -->
 <div class="tabs" role="tablist" aria-label="Main Tabs">
-  <button class="tab-button active" id="tabButtonTally" role="tab" aria-selected="true" aria-controls="tallyTab" onclick="openTab('tallyTab', this)">Tally</button>
-  <button class="tab-button" id="tabButtonMemories" role="tab" aria-selected="false" aria-controls="memoriesTab" onclick="openTab('memoriesTab', this)">Memories</button>
+  <button class="tab-button" data-tab="tally">Tally</button>
+<button class="tab-button" data-tab="memories">Memories</button>
 </div>
 
 <!-- Tabs content containers -->
