--- a/index.html
+++ b/index.html
@@ -181,6 +181,27 @@ button:focus {
     cursor: pointer;
     user-select: none;
   }
+
+    .gallery-photo {
+  width: 100px;
+  height: auto;
+  cursor: pointer;
+  transition: transform 0.3s ease;
+  border-radius: 4px;
+}
+
+.expanded-photo {
+  width: 95%;
+  max-width: 500px;
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  z-index: 9999;
+  transform: translate(-50%, -50%);
+  border: 3px solid white;
+  box-shadow: 0 0 20px rgba(0,0,0,0.8);
+  background-color: white;
+}
 </style>
 </head>
 <body>
