--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
-  <title>Fishin Buddy</title>
+  <link rel="icon" type="image/png" href="icon_192x192.png" />
+  <link rel="apple-touch-icon" href="icon_192x192.png" />
+  <title>Fishin' Buddy</title>
   <link rel="stylesheet" href="styles.css" />
   <style>
     body { font-family: Arial, sans-serif; margin: 0 1rem; background: #000; color: #f5f5dc; font-size:1.05rem; line-height:1.6; }
