--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <meta name="theme-color" content="#000000" />
   <link rel="icon" type="image/png" href="icon_192x192.png" />
   <link rel="apple-touch-icon" href="icon_192x192.png" />
+  <link rel="manifest" href="manifest.json"/>
   <title>Fishin' Buddy</title>
   <link rel="stylesheet" href="styles.css" />
   <style>
