--- a/index.html
+++ b/index.html
@@ -51,6 +51,15 @@
     <div id="photoGallery"></div>
   </section>
 
+  <div id="imageModal" class="modal" onclick="closeModal()">
+  <img id="modalImage" class="modal-content" />
+</div>
+
+<style>
+.modal { display: none; position: fixed; top: 0; left: 0; width: 100%; height: 100%; background: rgba(0,0,0,0.8); justify-content: center; align-items: center; }
+.modal-content { max-width: 90%; max-height: 80vh; border: 2px solid white; }
+</style>
+
   <script src="script.js"></script>
 </body>
 </html>
