--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
   <section id="memory" class="tab-content">
     <div id="photoUploader">
-      <input type="file" id="photoInput" accept="image/*" /><br><br>
+      <input type="file" id="photoInput" accept="image/*" multiple/><br><br>
       <input type="text" id="photoCaption" placeholder="Caption" /><br><br>
       <input type="text" id="photoLocationInput" placeholder="Location" /><br><br>
       <button id="savePostBtn">Save Post</button>
