--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <link rel="icon" type="image/png" href="icon_192x192.png" />
   <link rel="apple-touch-icon" href="icon_192x192.png" />
   <link rel="manifest" href="manifest.json"/>
+  <script src="https://cdn.jsdelivr.net/npm/html2canvas@1.4.1/dist/html2canvas.min.js"></script>
   <title>Fishin' Buddy</title>
   <link rel="stylesheet" href="styles.css" />
   <style>
