--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <link rel="apple-touch-icon" href="icon_192x192.png" />
   <link rel="manifest" href="manifest.json"/>
   <script src="https://cdn.jsdelivr.net/npm/html2canvas@1.4.1/dist/html2canvas.min.js"></script>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
   <title>Fishin' Buddy</title>
   <link rel="stylesheet" href="styles.css" />
   <style>
