--- a/index.html
+++ b/index.html
@@ -62,6 +62,46 @@
 .modal-content { max-width: 90%; max-height: 80vh; border: 2px solid white; }
 </style>
 
+<div id="instagramModal" style="
+  display: none;
+  position: fixed;
+  top: 0; left: 0; right: 0; bottom: 0;
+  background: rgba(0,0,0,0.7);
+  justify-content: center;
+  align-items: center;
+  z-index: 9999;
+">
+  <div style="
+    background: #fff;
+    padding: 20px;
+    max-width: 350px;
+    border-radius: 8px;
+    text-align: center;
+    font-family: 'Courier New', monospace;
+    color: #3e2d16;
+  ">
+    <h2>Share on Instagram</h2>
+    <p>
+      Your catch card has been downloaded.<br><br>
+      To share it on Instagram:<br>
+      1. Open the Instagram app.<br>
+      2. Tap the '+' icon to create a new post.<br>
+      3. Select the downloaded image from your device.<br>
+      4. Add any captions or tags you like and post it!
+    </p>
+    <button id="closeInstagramModal" style="
+      margin-top: 15px;
+      padding: 8px 20px;
+      background: #5e4322;
+      color: #fff;
+      border: none;
+      border-radius: 5px;
+      cursor: pointer;
+      font-weight: bold;
+    ">Got it!</button>
+  </div>
+</div>
+
   <script src="script.js"></script>
 </body>
 </html>
