--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
       <input type="file" id="photoInput" accept="image/*" multiple/><br><br>
       <input type="text" id="photoCaption" placeholder="Caption" /><br><br>
       <input type="text" id="photoLocationInput" placeholder="Location" /><br><br>
-      <button id="savePostBtn">Save Post</button>
+      <button id="savePostBtn">Upload</button>
     </div>
     <div id="photoGallery"></div>
   </section>
