--- a/index.html
+++ b/index.html
@@ -45,13 +45,13 @@
 
   <section id="memory" class="tab-content">
     <div id="photoUploader">
-      <input type="file" id="photoInput" accept="image/*" multiple/><br><br>
-      <input type="text" id="photoCaption" placeholder="Caption" /><br><br>
-      <input type="text" id="photoLocationInput" placeholder="Location" /><br><br>
-      <button id="savePostBtn">Upload</button>
+      <input type="file" id="photoInput" multiple>
+<input type="text" id="photoCaption" placeholder="Enter caption">
+<input type="text" id="photoLocationInput" placeholder="Enter location">
+<button onclick="handleUpload()">Upload</button>
+
+<div id="photoGallery"></div>
     </div>
-    <div id="photoGallery"></div>
-  </section>
 
   <div id="imageModal" class="modal" onclick="closeModal()">
   <img id="modalImage" class="modal-content" />
