--- a/index.html
+++ b/index.html
@@ -28,6 +28,20 @@
     .photo-container { background:#111; padding:0.75rem; border-radius:6px; text-align:center; }
     .gallery-photo { width:100%; height:120px; object-fit:cover; border-radius:6px; cursor:pointer; }
     .expanded-photo { position:fixed; top:50%; left:50%; transform:translate(-50%,-50%); max-width:90%; max-height:80vh; border:3px solid #f5f5dc; box-shadow:0 0 20px rgba(0,0,0,0.8); z-index:9999; }
+    .modal {
+  display: none;
+  position: fixed;
+  top: 0; left: 0;
+  width: 100%; height: 100%;
+  background: rgba(0,0,0,0.8);
+  justify-content: center;
+  align-items: center;
+}
+.modal-content {
+  max-width: 90%;
+  max-height: 80vh;
+  border: 2px solid white;
+}
   </style>
 </head>
 <body>
