--- a/index.html
+++ b/index.html
@@ -42,6 +42,55 @@
   max-height: 80vh;
   border: 2px solid white;
 }
+
+    .post {
+  background: #ffffff10;
+  padding: 1rem;
+  border-radius: 1rem;
+  margin-bottom: 1rem;
+  max-width: 100%;
+  overflow: hidden;
+  box-sizing: border-box;
+}
+
+.post img {
+  width: 100%;
+  border-radius: 0.5rem;
+  max-height: 300px;
+  object-fit: cover;
+  margin-bottom: 0.5rem;
+}
+
+.post input[type="text"] {
+  width: 100%;
+  max-width: 100%;
+  box-sizing: border-box;
+  border: none;
+  background: #ffffff20;
+  color: #fff;
+  padding: 0.5rem;
+  margin-bottom: 0.5rem;
+  border-radius: 0.5rem;
+  font-size: 0.9rem;
+  outline: none;
+  resize: none;
+  word-wrap: break-word;
+  overflow-wrap: break-word;
+}
+
+.post-buttons {
+  display: flex;
+  justify-content: space-between;
+  margin-top: 0.5rem;
+}
+
+.post-buttons button {
+  background: none;
+  border: none;
+  color: #fff;
+  font-size: 1.2rem;
+  cursor: pointer;
+}
   </style>
 </head>
 <body>
