--- a/index.html
+++ b/index.html
@@ -26,78 +26,73 @@
     .tally-controls { margin-top:8px; }
     #photoUploader { background:#121212; padding:1rem; border-radius:6px; color:#f5f5dc; margin-bottom:1rem; }
     #photoGallery {
-  display: flex;
-  flex-direction: column-reverse;
-  max-height: 75vh;
-  overflow-y: auto;
-  gap: 1rem;
-}
+      display: flex;
+      flex-direction: column-reverse;
+      max-height: 75vh;
+      overflow-y: auto;
+      gap: 1rem;
+    }
     .photo-container { background:#111; padding:0.75rem; border-radius:6px; text-align:center; }
     .gallery-photo { width:100%; height:120px; object-fit:cover; border-radius:6px; cursor:pointer; }
     .expanded-photo { position:fixed; top:50%; left:50%; transform:translate(-50%,-50%); max-width:90%; max-height:80vh; border:3px solid #f5f5dc; box-shadow:0 0 20px rgba(0,0,0,0.8); z-index:9999; }
     .modal {
-  display: none;
-  position: fixed;
-  top: 0; left: 0;
-  width: 100%; height: 100%;
-  background: rgba(0,0,0,0.8);
-  justify-content: center;
-  align-items: center;
-}
-.modal-content {
-  max-width: 90%;
-  max-height: 80vh;
-  border: 2px solid white;
-}
-
+      display: none;
+      position: fixed;
+      top: 0; left: 0;
+      width: 100%; height: 100%;
+      background: rgba(0,0,0,0.8);
+      justify-content: center;
+      align-items: center;
+    }
+    .modal-content {
+      max-width: 90%;
+      max-height: 80vh;
+      border: 2px solid white;
+    }
     .post {
-  background: #ffffff10;
-  padding: 1rem;
-  border-radius: 1rem;
-  margin-bottom: 1rem;
-  max-width: 100%;
-  overflow: hidden;
-  box-sizing: border-box;
-}
-
-.post img {
-  width: 100%;
-  border-radius: 0.5rem;
-  max-height: 300px;
-  object-fit: cover;
-  margin-bottom: 0.5rem;
-}
-
-.post input[type="text"] {
-  width: 100%;
-  max-width: 100%;
-  box-sizing: border-box;
-  border: none;
-  background: #ffffff20;
-  color: #fff;
-  padding: 0.5rem;
-  margin-bottom: 0.5rem;
-  border-radius: 0.5rem;
-  font-size: 0.9rem;
-  outline: none;
-  resize: none;
-  word-wrap: break-word;
-  overflow-wrap: break-word;
-}
-
-.post-buttons {
-  display: flex;
-  justify-content: space-between;
-  margin-top: 0.5rem;
-}
-
-.post-buttons button {
-  background: none;
-  border: none;
-  color: #fff;
-  font-size: 1.2rem;
-  cursor: pointer;
-}
+      background: #ffffff10;
+      padding: 1rem;
+      border-radius: 1rem;
+      margin-bottom: 1rem;
+      max-width: 100%;
+      overflow: hidden;
+      box-sizing: border-box;
+    }
+    .post img {
+      width: 100%;
+      border-radius: 0.5rem;
+      max-height: 300px;
+      object-fit: cover;
+      margin-bottom: 0.5rem;
+    }
+    .post input[type="text"] {
+      width: 100%;
+      max-width: 100%;
+      box-sizing: border-box;
+      border: none;
+      background: #ffffff20;
+      color: #fff;
+      padding: 0.5rem;
+      margin-bottom: 0.5rem;
+      border-radius: 0.5rem;
+      font-size: 0.9rem;
+      outline: none;
+      resize: none;
+      word-wrap: break-word;
+      overflow-wrap: break-word;
+    }
+    .post-buttons {
+      display: flex;
+      justify-content: space-between;
+      margin-top: 0.5rem;
+    }
+    .post-buttons button {
+      background: none;
+      border: none;
+      color: #fff;
+      font-size: 1.2rem;
+      cursor: pointer;
+    }
   </style>
 </head>
 <body>
@@ -167,39 +162,8 @@
     <img id="modalImg" src="" alt="Full size" style="max-width:90%; max-height:90%; border-radius:8px; box-shadow:0 0 20px rgba(0,0,0,0.7);" />
   </div>
 
+  <!-- Include your external JavaScript file -->
   <script src="script.js"></script>
-
-  <script>
-    const modal = document.getElementById('imageModal');
-    const modalImg = document.getElementById('modalImg');
-    const modalClose = document.getElementById('modalClose');
-
-    document.addEventListener('click', (e) => {
-      if (e.target.classList.contains('thumbnail')) {
-        modalImg.src = e.target.dataset.fullsrc || e.target.src;
-        modal.style.display = 'flex';
-        document.body.style.overflow = 'hidden'; // prevent background scroll
-      }
-    });
-
-    function closeModal() {
-      modal.style.display = 'none';
-      modalImg.src = '';
-      document.body.style.overflow = '';
-    }
-
-    modalClose.addEventListener('click', closeModal);
-
-    modal.addEventListener('click', (e) => {
-      if (e.target === modal) closeModal();
-    });
-
-    document.addEventListener('keydown', (e) => {
-      if (e.key === 'Escape' && modal.style.display === 'flex') {
-        closeModal();
-      }
-    });
-  </script>
 
 </body>
 </html>
