--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
@@ -10,89 +11,328 @@
   <script src="https://cdn.jsdelivr.net/npm/html2canvas@1.4.1/dist/html2canvas.min.js"></script>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
   <title>Fishin' Buddy</title>
-  <link rel="stylesheet" href="styles.css" />
   <style>
-    /* Your existing styles unchanged */
-    body { font-family: Arial, sans-serif; margin: 0 1rem; background: #000; color: #f5f5dc; font-size:1.05rem; line-height:1.6; }
-    button { background:#f5f5dc; color:#000; border:none; padding:0.6rem 1.2rem; border-radius:6px; cursor:pointer; font-weight:700; font-size:1rem; box-shadow:0 0 6px #3333; transition:background 0.2s ease, transform 0.1s ease; }
-    button:hover, button:focus { background:#e5e5c4; transform:scale(1.02); outline:none; }
-    .tabs { display:flex; margin-top:1rem; border-bottom:2px solid #444; }
-    .tab-button { flex:1; padding:0.75rem; background:#111; color:#f5f5dc; border:none; cursor:pointer; font-weight:bold; transition:background 0.3s; }
-    .tab-button.active { background:#cc3300; color:black; border-bottom:3px solid #aa2200; }
-    .tab-content { display:none; padding:1rem 0 2rem 0; }
-    .tab-content.active { display:block; }
-    .season-total { font-weight:bold; color:#cc3300; margin-bottom:1rem; font-size:1.2rem;}
-    .fish-item { margin:8px 0; background:#111; padding:12px; border-radius:6px; }
-    .tally-controls { margin-top:8px; }
-    #photoUploader { background:#121212; padding:1rem; border-radius:6px; color:#f5f5dc; margin-bottom:1rem; }
-    #photoGallery {
-      display: flex;
-      flex-direction: column-reverse;
-      max-height: 75vh;
-      overflow-y: auto;
-      gap: 1rem;
+    body { 
+      font-family: Arial, sans-serif; 
+      margin: 0 1rem; 
+      background: #000; 
+      color: #f5f5dc; 
+      font-size: 1.05rem; 
+      line-height: 1.6; 
     }
-    .photo-container { background:#111; padding:0.75rem; border-radius:6px; text-align:center; }
-    .gallery-photo { width:100%; height:120px; object-fit:cover; border-radius:6px; cursor:pointer; }
-    .expanded-photo { position:fixed; top:50%; left:50%; transform:translate(-50%,-50%); max-width:90%; max-height:80vh; border:3px solid #f5f5dc; box-shadow:0 0 20px rgba(0,0,0,0.8); z-index:9999; }
-    .modal {
-      display: none;
-      position: fixed;
-      top: 0; left: 0;
-      width: 100%; height: 100%;
-      background: rgba(0,0,0,0.8);
-      justify-content: center;
-      align-items: center;
-    }
-    .modal-content {
-      max-width: 90%;
-      max-height: 80vh;
-      border: 2px solid white;
-    }
-    .post {
-      background: #ffffff10;
-      padding: 1rem;
-      border-radius: 1rem;
-      margin-bottom: 1rem;
-      max-width: 100%;
-      overflow: hidden;
-      box-sizing: border-box;
-    }
-    .post img {
-      width: 100%;
-      border-radius: 0.5rem;
-      max-height: 300px;
-      object-fit: cover;
-      margin-bottom: 0.5rem;
-    }
-    .post input[type="text"] {
-      width: 100%;
-      max-width: 100%;
-      box-sizing: border-box;
-      border: none;
-      background: #ffffff20;
-      color: #fff;
-      padding: 0.5rem;
-      margin-bottom: 0.5rem;
-      border-radius: 0.5rem;
-      font-size: 0.9rem;
-      outline: none;
-      resize: none;
-      word-wrap: break-word;
-      overflow-wrap: break-word;
-    }
-    .post-buttons {
-      display: flex;
-      justify-content: space-between;
-      margin-top: 0.5rem;
-    }
-    .post-buttons button {
-      background: none;
-      border: none;
-      color: #fff;
-      font-size: 1.2rem;
-      cursor: pointer;
-    }
+
+```
+button { 
+  background: #f5f5dc; 
+  color: #000; 
+  border: none; 
+  padding: 0.6rem 1.2rem; 
+  border-radius: 6px; 
+  cursor: pointer; 
+  font-weight: 700; 
+  font-size: 1rem; 
+  box-shadow: 0 0 6px #333; 
+  transition: background 0.2s ease, transform 0.1s ease; 
+}
+
+button:hover, button:focus { 
+  background: #e5e5c4; 
+  transform: scale(1.02); 
+  outline: none; 
+}
+
+.tabs { 
+  display: flex; 
+  margin-top: 1rem; 
+  border-bottom: 2px solid #444; 
+}
+
+.tab-button { 
+  flex: 1; 
+  padding: 0.75rem; 
+  background: #111; 
+  color: #f5f5dc; 
+  border: none; 
+  cursor: pointer; 
+  font-weight: bold; 
+  transition: background 0.3s; 
+}
+
+.tab-button.active { 
+  background: #cc3300; 
+  color: white; 
+  border-bottom: 3px solid #aa2200; 
+}
+
+.tab-content { 
+  display: none; 
+  padding: 1rem 0 2rem 0; 
+}
+
+.tab-content.active { 
+  display: block; 
+}
+
+.season-total { 
+  font-weight: bold; 
+  color: #cc3300; 
+  margin-bottom: 1rem; 
+  font-size: 1.2rem;
+}
+
+.fish-item { 
+  margin: 8px 0; 
+  background: #111; 
+  padding: 12px; 
+  border-radius: 6px; 
+  border: 1px solid #333;
+}
+
+.fish-header {
+  font-weight: bold;
+  cursor: pointer;
+  font-size: 1.1rem;
+  margin-bottom: 8px;
+  color: #f5f5dc;
+}
+
+.fish-header:hover {
+  color: #cc3300;
+}
+
+.fish-count {
+  color: #cc3300;
+  font-weight: bold;
+}
+
+.tally-controls { 
+  margin-top: 8px;
+  display: flex;
+  gap: 8px;
+  align-items: center;
+}
+
+.tally-controls button {
+  padding: 4px 12px;
+  font-size: 1.2rem;
+  min-width: 36px;
+}
+
+.info-button {
+  background: #444 !important;
+  color: #f5f5dc !important;
+  font-size: 0.9rem !important;
+  padding: 4px 8px !important;
+}
+
+.fish-info {
+  margin-top: 8px;
+  padding: 8px;
+  background: #222;
+  border-radius: 4px;
+  font-size: 0.9rem;
+  line-height: 1.4;
+}
+
+.reset-button {
+  background: #cc3300 !important;
+  color: white !important;
+  margin-top: 1rem;
+}
+
+#photoUploader { 
+  background: #121212; 
+  padding: 1rem; 
+  border-radius: 6px; 
+  color: #f5f5dc; 
+  margin-bottom: 1rem; 
+  border: 1px solid #333;
+}
+
+#photoInput {
+  background: #333;
+  color: #f5f5dc;
+  border: 1px solid #555;
+  padding: 8px;
+  border-radius: 4px;
+  margin-right: 8px;
+  width: 200px;
+}
+
+#photoGallery {
+  display: flex;
+  flex-direction: column;
+  max-height: 75vh;
+  overflow-y: auto;
+  gap: 1rem;
+  padding: 0 4px;
+}
+
+.photo-container { 
+  background: #111; 
+  padding: 12px; 
+  border-radius: 8px; 
+  border: 1px solid #333;
+  max-width: 100%;
+  box-sizing: border-box;
+}
+
+.photo-container img {
+  width: 100%;
+  max-width: 400px;
+  height: auto;
+  border-radius: 6px;
+  cursor: pointer;
+  transition: transform 0.2s ease;
+}
+
+.photo-container img:hover {
+  transform: scale(1.02);
+}
+
+.photo-caption {
+  margin-top: 8px;
+  display: flex;
+  align-items: center;
+  gap: 8px;
+}
+
+.photo-meta {
+  font-size: 0.9rem;
+  color: #bbb;
+  margin-top: 4px;
+}
+
+.photo-timestamp {
+  font-size: 0.8rem;
+  color: #888;
+  margin-top: 6px;
+}
+
+.photo-buttons {
+  display: flex;
+  justify-content: center;
+  gap: 12px;
+  margin-top: 12px;
+}
+
+.photo-buttons button {
+  background: none !important;
+  border: none !important;
+  color: #f5f5dc !important;
+  font-size: 1.4rem !important;
+  cursor: pointer !important;
+  padding: 8px !important;
+  border-radius: 4px !important;
+  transition: background 0.2s ease !important;
+}
+
+.photo-buttons button:hover {
+  background: #333 !important;
+}
+
+.edit-button {
+  background: none !important;
+  border: none !important;
+  color: #f5f5dc !important;
+  font-size: 1.2rem !important;
+  cursor: pointer !important;
+  padding: 4px !important;
+}
+
+.caption-input {
+  flex-grow: 1;
+  padding: 6px;
+  border-radius: 4px;
+  border: 1px solid #555;
+  background: #333;
+  color: #f5f5dc;
+  font-size: 0.9rem;
+}
+
+.caption-save, .caption-cancel {
+  padding: 4px 8px !important;
+  font-size: 0.8rem !important;
+  margin-left: 4px !important;
+}
+
+/* Modal Styles */
+.modal {
+  display: none;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.8);
+  justify-content: center;
+  align-items: center;
+  z-index: 9999;
+}
+
+.modal img {
+  max-width: 90%;
+  max-height: 90%;
+  border-radius: 8px;
+  box-shadow: 0 0 20px rgba(0, 0, 0, 0.7);
+}
+
+.modal-close {
+  position: absolute;
+  top: 20px;
+  right: 30px;
+  font-size: 40px;
+  color: white;
+  cursor: pointer;
+  user-select: none;
+  z-index: 10000;
+}
+
+.instagram-modal {
+  background: #fff;
+  padding: 20px;
+  max-width: 350px;
+  border-radius: 8px;
+  text-align: center;
+  font-family: 'Courier New', monospace;
+  color: #3e2d16;
+}
+
+.instagram-modal h2 {
+  margin-top: 0;
+}
+
+.instagram-modal button {
+  margin-top: 15px;
+  padding: 8px 20px;
+  background: #5e4322;
+  color: #fff;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  font-weight: bold;
+}
+
+/* Scrollbar styling for photo gallery */
+#photoGallery::-webkit-scrollbar {
+  width: 8px;
+}
+
+#photoGallery::-webkit-scrollbar-track {
+  background: #333;
+  border-radius: 4px;
+}
+
+#photoGallery::-webkit-scrollbar-thumb {
+  background: #666;
+  border-radius: 4px;
+}
+
+#photoGallery::-webkit-scrollbar-thumb:hover {
+  background: #888;
+}
+```
+
   </style>
 </head>
 <body>
@@ -105,36 +345,32 @@
   <section id="tally" class="tab-content active">
     <div class="season-total">Season Total: <span id="grandTotal">0</span> Fish</div>
     <div id="fishList"></div>
-    <button type="button" onclick="resetSeason()">Reset Season</button>
+    <button type="button" class="reset-button" onclick="resetSeason()">Reset Season</button>
   </section>
 
   <section id="memory" class="tab-content">
     <div id="photoUploader">
-      <input type="file" id="photoInput" multiple />
-      <button type="button" onclick="handleUpload()">Upload</button>
+      <input type="file" id="photoInput" accept="image/*" multiple />
+      <button type="button" onclick="handleUpload()">Upload Photos</button>
     </div>
 
-    <div id="photoGallery" class="gallery-grid"></div>
+```
+<div id="photoGallery"></div>
+```
+
   </section>
 
-  <div id="instagramModal" style="
-    display: none;
-    position: fixed;
-    top: 0; left: 0; right: 0; bottom: 0;
-    background: rgba(0,0,0,0.7);
-    justify-content: center;
-    align-items: center;
-    z-index: 9999;
-  ">
-    <div style="
-      background: #fff;
-      padding: 20px;
-      max-width: 350px;
-      border-radius: 8px;
-      text-align: center;
-      font-family: 'Courier New', monospace;
-      color: #3e2d16;
-    ">
+  <!-- Image Modal -->
+
+  <div id="imageModal" class="modal">
+    <span class="modal-close" id="modalClose">&times;</span>
+    <img id="modalImg" src="" alt="Full size" />
+  </div>
+
+  <!-- Instagram Modal -->
+
+  <div id="instagramModal" class="modal">
+    <div class="instagram-modal">
       <h2>Share on Instagram</h2>
       <p>
         Your catch card has been downloaded.<br><br>
@@ -144,25 +380,10 @@
         3. Select the downloaded image from your device.<br>
         4. Add any captions or tags you like and post it!
       </p>
-      <button id="closeInstagramModal" style="
-        margin-top: 15px;
-        padding: 8px 20px;
-        background: #5e4322;
-        color: #fff;
-        border: none;
-        border-radius: 5px;
-        cursor: pointer;
-        font-weight: bold;
-      ">Got it!</button>
+      <button id="closeInstagramModal">Got it!</button>
     </div>
   </div>
 
-  <div id="imageModal" style="display:none; position:fixed; z-index:1000; left:0;top:0;width:100%;height:100%;background:rgba(0,0,0,0.8); align-items:center; justify-content:center;">
-    <span id="modalClose" style="position:absolute; top:20px; right:30px; font-size:40px; color:white; cursor:pointer; user-select:none;">&times;</span>
-    <img id="modalImg" src="" alt="Full size" style="max-width:90%; max-height:90%; border-radius:8px; box-shadow:0 0 20px rgba(0,0,0,0.7);" />
-  </div>
-
-  <!-- Include your external JavaScript file -->
   <script src="script.js"></script>
 
 </body>
