--- a/index.html
+++ b/index.html
@@ -383,6 +383,8 @@ button:focus {
   <section id="memory" class="tab-content">
     <div id="photoUploader">
       <input type="file" id="photoInput" accept="image/*" multiple />
+      <input type="text" id="photoCaption" placeholder="Caption">
+  <input type="text" id="photoLocation" placeholder="Location">
       <button type="button" onclick="handleUpload()">Upload Photos</button>
     </div>
 
